--- a/src/client/pages/new.html
+++ b/src/client/pages/new.html
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-nav" href="http://localhost:3000/"><img src="/images/logoSm.png" style="padding-top: 10px; margin-right: 50px;" alt="Impressions logo image"></a>
+                    <a class="navbar-nav" href="/"><img src="/images/logoSm.png" style="padding-top: 10px; margin-right: 50px;" alt="Impressions logo image"></a>
                 </div>
                 <div class="navbar-header center">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
@@ -29,7 +29,7 @@
                     <h1 class="center">New Restaurant</h1>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="http://localhost:3000/pages/new.html"><span class="glyphicon glyphicon-plus"></span> new restaurant</a></li>
+                    <li><a href="./pages/new.html"><span class="glyphicon glyphicon-plus"></span> new restaurant</a></li>
                 </ul>
             </div>
         </nav>
@@ -135,6 +135,11 @@
                     <div class="form-group">
                         <div class="col-lg-10 col-lg-offset-2">
                             <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-10 col-lg-offset-2 inline">
+                            <a href="/"><button <!-- type="submit" --> class="btn btn-danger">Cancel</button></a>
                         </div>
                     </div>
             </fieldset>
