fixing new link on new page

--- a/src/client/pages/new.html
+++ b/src/client/pages/new.html
@@ -29,7 +29,7 @@
                     <h1 class="center">New Restaurant</h1>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="./pages/new.html"><span class="glyphicon glyphicon-plus"></span> new restaurant</a></li>
+                    <li><a href="./new.html"><span class="glyphicon glyphicon-plus"></span> new restaurant</a></li>
                 </ul>
             </div>
         </nav>
