--- a/src/client/pages/new.html
+++ b/src/client/pages/new.html
@@ -54,7 +54,9 @@
                     <div class="form-group">
                         <label for="textArea" class="col-lg-2 control-label">State</label>
                         <div class="col-lg-2">
-                            <select class="form-control statesDropDown" id="select"></select>
+                            <select class="form-control statesDropDown" id="select">
+                                <option selected disabled="">State</option>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group">
@@ -63,7 +65,6 @@
                             <select class="form-control foodTypeDropDown" id="select"></select>
                         </div>
                     </div>
-                    <!-- Everything above here good -->
                     <div class="form-group">
                         <label class="col-lg-2 control-label">Rating</label>
                         <div class="col-lg-10">
